# Chess-Engine

./: .gitattributes  .gitignore  Chess.sln  README.md  SinghArpit2492_Chess_Project_Documentation.md  SinghArpit2492_Engine_Architecture_Deep_Dive.md  add_headers.py  download_cheq.js  download_pieces.js  download_shapes.js  generate_book.js  implementation_plan.md  walkthrough.md
.cph/: .abc308a.cpp_9834d1d0bae645d71af97d87bdf6f806.prob  .abc308c.cpp_8a3005f3de1969e9f0ff0baa363c2dc4.prob
.github/workflows/: deploy.yml
ChessEngine/: ChessEngine.csproj  Program.cs
ChessEngine/Core/: Board.cs  Coord.cs  FenParser.cs  GameState.cs  Move.cs  Piece.cs  Zobrist.cs
ChessEngine/Evaluation/: Evaluator.cs  PositionTables.cs
ChessEngine/MoveGeneration/: BoardHelper.cs  MoveGenerator.cs
ChessEngine/Search/: MoveRanker.cs  SearchEngine.cs  TranspositionTable.cs
ChessEngine/UI/: ConsoleInputHelper.cs  Display.cs
ChessWeb/: index.html  package-lock.json  package.json  vite.config.ts
ChessWeb/public/engine/: chess_engine.js  chess_engine.wasm
ChessWeb/src/: App.css  App.tsx  index.css  main.tsx  types.ts
ChessWeb/src/components/: AnalysisPanel.tsx  CapturedPieces.tsx  ChessBoard.tsx  EvalBar.tsx  EvalGraph.tsx  GameSetupModal.tsx  MoveHistory.tsx  PieceArt.tsx  PlayerCard.tsx  TabPanel.tsx
ChessWeb/src/contexts/: ThemeContext.tsx
ChessWeb/src/engine/: board.ts  engine.worker.ts  engine_bridge.ts  eval.ts  movegen.ts  search.ts
ChessWeb/src/pages/: GamePage.tsx  LandingPage.tsx
ChessWeb/src/styles/: board.css  game.css  index.css  landing.css
engine/: CMakeLists.txt
engine/include/: board.h  eval.h  movegen.h  nnue.h  search.h  types.h  wasm_api.h
engine/src/: board.cpp  eval.cpp  main.cpp  movegen.cpp  nnue.cpp  search.cpp  wasm_api.cpp
